fixed card spacing

--- a/style.css
+++ b/style.css
@@ -145,8 +145,7 @@ section {
 .card_info {
     display: grid;
     height: max-content;
-    width: 90%;
-    margin-left: 5%;
+    width: 100%;
     padding: 5px;
     border: 2.5px solid #ebe4f1;
     background-color: #faf7fc;
